# carbonintensity

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  settings.yml
.github/workflows/: publish.yml  push.yaml
carbonintensity/: client.py
custom_components/carbon_intensity_uk/: __init__.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py
tests/: client_test.py  response.json
