[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon_intensity"
version = "0.4.0"
description = "Home Assistant Client library for Carbon Intensity API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Jorge Cruz Lambert", email = "jscl@pm.me"},
]
dependencies = ["aiohttp", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "aiohttp", "numpy"]

[project.urls]
Homepage = "https://github.com/jscruz/carbonintensity"
Issues = "https://github.com/jscruz/carbonintensity/issues"

[tool.setuptools.packages.find]
exclude = ["custom_components*", "tests*"]

[tool.pytest.ini_options]
addopts = "--verbose"
python_files = ["tests/*.py"]
